# AoC2018

./: .gitignore  AoC2018.cabal  CHANGELOG.md  README.md  stack.yaml
app/: Main.hs
benchmark/: Main.hs
src/: AoC2018.hs  Day1.hs  Day10.hs  Day2.hs  Day22.hs  Day3.hs  Day5.hs  Day8.hs  Day9.hs  Util.hs
test/: Spec.hs
test-data/: 01a.txt  01b.txt  02a.txt  02b.txt  03a.txt  03b.txt  04a.txt  05a.txt  05b.txt  08a.txt  08b.txt  09a.txt  09b.txt  10a.txt  10b.txt  22a.txt  22b.txt
