cabal-version:       2.0
name:                AoC2018
version:             0.0.0
synopsis:            Solutions to advent of code 2018
description:         Solutions to advent of code 2018
license:             MIT
license-file:        LICENSE
author:              Meck
maintainer:          Johan@meck.se
copyright:           2018 Meck
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.4.4

library
  hs-source-dirs:      src
  exposed-modules:     AoC2018
                     , Day1
                     , Day2
                     , Day3
                     , Day4
                     , Day5
                     , Day6
                     , Day7
                     , Day8
                     , Day9
                     , Day10
                     , Day11
                     , Day12
                     , Day13
                     , Day14
                     , Day15
                     , Day16
                     , Day17
                     , Day18
                     , Day19
                     , Day20
                     , Day21
                     , Day22
                     , Day23
                     , Day24
                     , Util
                       

  build-depends:       base ^>= 4.11.1.0
                     , text
                     , containers
                     , split
                     , mtl
                     , megaparsec
                     , safe
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

executable AoC2018
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base ^>= 4.11.1.0
                     , AoC2018
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

test-suite AoC2018-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base ^>= 4.11.1.0
                     , tasty
                     , tasty-hunit
                     , text
                     , AoC2018
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

benchmark AoC2018-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs

  build-depends:       base ^>= 4.11.1.0
                     , gauge
                     , AoC2018
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
